# krcg-static

./: .gitignore  .markdownlint.json  CLAUDE.md  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: data.yml  deployment.yml  static.yml  validation.yml
krcg_static/: __init__.py  ocr.py
static/: example.html  index.css  index.html
static/data/: amaranth_ids.json  twd.htm  twda.json  vtes.json
static/data/tournament/: index.html
static/data/tournament/202207_EC/202207_EC_BotR/: 202207_EC_BotR_1.txt  202207_EC_BotR_10.txt  202207_EC_BotR_11.txt  202207_EC_BotR_12.txt  202207_EC_BotR_13.txt  202207_EC_BotR_14.txt  202207_EC_BotR_15.txt  202207_EC_BotR_16.txt  202207_EC_BotR_17.txt  202207_EC_BotR_18.txt  202207_EC_BotR_19.txt  202207_EC_BotR_2.txt  202207_EC_BotR_20.txt  202207_EC_BotR_22.txt  202207_EC_BotR_23.txt  202207_EC_BotR_24.txt  202207_EC_BotR_25.txt  202207_EC_BotR_26.txt  202207_EC_BotR_27.txt  202207_EC_BotR_28.txt  202207_EC_BotR_3.txt  202207_EC_BotR_30.txt  202207_EC_BotR_31.txt  202207_EC_BotR_32.txt  202207_EC_BotR_33.txt  202207_EC_BotR_34.txt  202207_EC_BotR_35.txt  202207_EC_BotR_36.txt  202207_EC_BotR_37.txt  202207_EC_BotR_38.txt  202207_EC_BotR_39.txt  202207_EC_BotR_4.txt  202207_EC_BotR_40.txt  202207_EC_BotR_41.txt  202207_EC_BotR_5.txt  202207_EC_BotR_6.txt  202207_EC_BotR_7.txt  202207_EC_BotR_8.txt  202207_EC_BotR_9.txt
static/data/tournament/202207_EC/202207_EC_Day1/: 202207_EC_Day1_10.txt  202207_EC_Day1_11.txt  202207_EC_Day1_12.txt  202207_EC_Day1_13.txt  202207_EC_Day1_14.txt  202207_EC_Day1_15.txt  202207_EC_Day1_16.txt  202207_EC_Day1_17.txt  202207_EC_Day1_18.txt  202207_EC_Day1_19.txt  202207_EC_Day1_2.txt  202207_EC_Day1_20.txt  202207_EC_Day1_21.txt  202207_EC_Day1_22.txt  202207_EC_Day1_23.txt  202207_EC_Day1_24.txt  202207_EC_Day1_25.txt  202207_EC_Day1_26.txt  202207_EC_Day1_27.txt  202207_EC_Day1_28.txt  202207_EC_Day1_29.txt  202207_EC_Day1_3.txt  202207_EC_Day1_30.txt  202207_EC_Day1_31.txt  202207_EC_Day1_32.txt  202207_EC_Day1_33.txt  202207_EC_Day1_34.txt  202207_EC_Day1_35.txt  202207_EC_Day1_36.txt  202207_EC_Day1_37.txt  202207_EC_Day1_38.txt  202207_EC_Day1_39.txt  202207_EC_Day1_4.txt  202207_EC_Day1_40.txt  202207_EC_Day1_41.txt  202207_EC_Day1_42.txt  (+62 more)
static/data/tournament/202211_NC_Finland/: 202211_NC_Finland_1.txt  202211_NC_Finland_10.txt  202211_NC_Finland_11.txt  202211_NC_Finland_12.txt  202211_NC_Finland_13.txt  202211_NC_Finland_14.txt  202211_NC_Finland_17.txt  202211_NC_Finland_19.txt  202211_NC_Finland_2.txt  202211_NC_Finland_22.txt  202211_NC_Finland_24.txt  202211_NC_Finland_29.txt  202211_NC_Finland_3.txt  202211_NC_Finland_31.txt  202211_NC_Finland_4.txt  202211_NC_Finland_41.txt  202211_NC_Finland_42.txt  202211_NC_Finland_43.txt  202211_NC_Finland_44.txt  202211_NC_Finland_45.txt  202211_NC_Finland_5.txt  202211_NC_Finland_6.txt  202211_NC_Finland_7.txt  202211_NC_Finland_8.txt  SM-2022.xlsx  readme.txt
static/data/tournament/202403_AC/: AC2024_1.txt  AC2024_10.txt  AC2024_11.txt  AC2024_12.txt  AC2024_13.txt  AC2024_14.txt  AC2024_15.txt  AC2024_16.txt  AC2024_17.txt  AC2024_18.txt  AC2024_19.txt  AC2024_2.txt  AC2024_20.txt  AC2024_21.txt  AC2024_22.txt  AC2024_23.txt  AC2024_24.txt  AC2024_25.txt  AC2024_26.txt  AC2024_27.txt  AC2024_28.txt  AC2024_29.txt  AC2024_3.txt  AC2024_30.txt  AC2024_31.txt  AC2024_32.txt  AC2024_33.txt  AC2024_34.txt  AC2024_35.txt  AC2024_36.txt  AC2024_37.txt  AC2024_38.txt  AC2024_39.txt  AC2024_4.txt  AC2024_40.txt  AC2024_41.txt  AC2024_42.txt  AC2024_43.txt  AC2024_44.txt  AC2024_45.txt  (+24 more)
static/data/v4/: amaranth_ids.json
static/web/: krcg-blogger.css  krcg-blogger.js  krcg.css  krcg.js
tests/: conftest.py  test_static.py  twda_test.html
utils/: format_tournament.py  ocr.py  prepare_bcp.py  top_rank.py
(+140 files in other folders)
