[metadata]
name = krcg-static
version = 0.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/krcg
description="KRCG Static website and files generator",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg twd static web
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Development
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    krcg >= 3.4
    aiofile
    aiohttp
    requests
    unidecode

[options.entry_points]
console_scripts =
    krcg-static = krcg_static:main

[options.extras_require]
dev =
    black
    flake8
    ipython
    pytest
# unused: dependencies for utils/ocr.py
ocr = 
    opencv-python
    pytesseract

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
